--- a/assets/archivestyle.css
+++ b/assets/archivestyle.css
@@ -200,11 +200,13 @@ hr{
    ■ タイムライン（このページ限定）
 ========================= */
 
+
 .timeline-page .timeline {
   border-left: 1px solid #888;
   padding-left: 16px;
   margin-top: 10px;
   max-width: 720px;
+  margin: 40px auto 40px 15%;
 }
 
 .timeline-page .timeline-item {
@@ -263,4 +265,5 @@ hr{
   line-height: 1.8;
   letter-spacing: 0.5px;
 }
+
 
