--- a/assets/archivestyle.css
+++ b/assets/archivestyle.css
@@ -209,6 +209,11 @@ hr{
   margin: 40px auto 40px 15%;
 }
 
+.timeline a {
+  color: #e8d8df;
+  text-decoration: none;
+}
+
 .timeline-page .timeline-item {
   margin-bottom: 18px;
   line-height: 1.7;
@@ -265,5 +270,6 @@ hr{
   line-height: 1.8;
   letter-spacing: 0.5px;
 }
+
 
 
