--- a/assets/style.css
+++ b/assets/style.css
@@ -290,9 +290,10 @@ body > .list {
 
 /* クレジット表記 */
 .credits{
-  text-align:center;
+　text-align:center;
   max-width:720px;
-  margin:0 auto;
+  margin:40px auto 60px;
+  padding:0 20px;
 }
 
 .credit-item{
@@ -322,4 +323,3 @@ body > .list {
   margin-top:6px;
   opacity:0.7;
 }
-
